# SoftEdIBO

./: .gitignore  README.md  SETUP.md  install.sh  pyproject.toml  requirements.txt  softedibo.spec
.github/workflows/: build.yml
3Dmodels/TurtleBase/: Base.stl  LateralDiagonal.stl  LateralOnX.stl
config/: settings.yaml
config/examples/: touch_position_tracking_example.yaml
docs/: ACTIVITIES.md  STUDY_PLAN.md  TOUCH_ML.md  TOUCH_POSITION_TRACKING.md
firmware/: PROTOCOL.md
firmware/common/: cmd_queue.h  fill_control.h  se_espnow.h  se_ota.h
firmware/gateway/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.seeed_xiao_esp32c6
firmware/gateway/src/: CMakeLists.txt  main.cpp  main_arduino.cpp
firmware/node_actuator/: README.md  platformio.ini
firmware/node_magnet_sensor/: README.md  platformio.ini
firmware/node_multiplexed/: README.md  platformio.ini
firmware/node_sensor/: README.md  platformio.ini
hardware_PCB/: Bigthemio-bottom.pos  Bigthemio-job.gbrjob  Bigthemio-top.pos  Bigthemio.kicad_prl  Bigthemio.kicad_pro  Bigthemio.kicad_sch  Bigthemio.kicad_sch-bak  Bigthemio.step  Themio  logic_I2C.kicad_sch
scripts/: build-firmware.sh  compile_ui.sh  label_touches.py  run.py  train_touch_model.py
tests/: test_database.py  test_espnow_gateway.py  test_export.py  test_fill_calibration.py  test_fill_scaling.py  test_gui.py  test_labeling.py  test_node_ota_updater.py  test_organ_sensing.py  test_skin_shapes.py  test_stream_recorder.py  test_touch_event_router.py  test_touch_ml.py  test_tree_robot.py  test_turtle_robot.py
(+194 files in other folders)
