[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softedibo"
version = "0.1.1"
description = "Soft-based robot for inclusive education - Robot Hospital Activity"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "PySide6>=6.5",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "esptool>=4.0",
]

[project.optional-dependencies]
thymio = ["tdmclient>=0.1.0"]
postgresql = ["psycopg2-binary>=2.9"]
dev = ["pytest>=7.0", "pytest-qt>=4.2"]
# Touch-gesture ML — needed ONLY to train (scripts/train_touch_model.py) and to
# run a trained model. The app, recording and segmentation/feature pipeline run
# without these (the classifier is inert when they're absent).
ml = ["numpy>=1.24", "scikit-learn>=1.3", "joblib>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
